Added the basic entities and other required changes
Added the basic entities and other required changes

--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -78,8 +78,24 @@
     <Compile Include="Migrations\201507310409173_AddUserEntity.Designer.cs">
       <DependentUpon>201507310409173_AddUserEntity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508010827488_CourseAndToolkit.cs" />
+    <Compile Include="Migrations\201508010827488_CourseAndToolkit.Designer.cs">
+      <DependentUpon>201508010827488_CourseAndToolkit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508010841393_AddedConstraint.cs" />
+    <Compile Include="Migrations\201508010841393_AddedConstraint.Designer.cs">
+      <DependentUpon>201508010841393_AddedConstraint.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="POCO\Course.cs" />
+    <Compile Include="POCO\CourseDocument.cs" />
+    <Compile Include="POCO\Currency.cs" />
+    <Compile Include="POCO\DocumentScope.cs" />
+    <Compile Include="POCO\DocumentType.cs" />
     <Compile Include="POCO\EnterpriseEntity.cs" />
+    <Compile Include="POCO\Gender.cs" />
+    <Compile Include="POCO\Toolkit.cs" />
+    <Compile Include="POCO\ToolkitDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EnterpriseDbInitialization.cs" />
     <Compile Include="DataContext.cs" />
@@ -97,6 +113,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201507310409173_AddUserEntity.resx">
       <DependentUpon>201507310409173_AddUserEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508010827488_CourseAndToolkit.resx">
+      <DependentUpon>201508010827488_CourseAndToolkit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508010841393_AddedConstraint.resx">
+      <DependentUpon>201508010841393_AddedConstraint.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
