--- a/API/API.csproj
+++ b/API/API.csproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\DocumentController.cs" />
     <Compile Include="Controllers\ToolkitController.cs" />
@@ -173,6 +174,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{48516c69-5318-46db-a9e4-1e3c73d05c2d}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Data\Data.csproj">
       <Project>{31cf6eea-b797-41bf-9b22-5cf0d3d024ef}</Project>
       <Name>Data</Name>
