--- a/API/Web.config
+++ b/API/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IGI" connectionString="Data Source=ASHISH-PC\SQLEXPRESS; Initial Catalog=IGI;User ID=sa;Password=ashish;Integrated Security=True;Connect Timeout=15;Encrypt=False;" providerName="System.Data.SqlClient" />
+    <add name="IGI" connectionString="Data Source=HIMANSHU-PC\SQLEXPRESS; Initial Catalog=IGI;Integrated Security=True;Connect Timeout=15;Encrypt=False;" providerName="System.Data.SqlClient" />
 
     <!--<add name="IGI" providerName="System.Data.SqlClient" connectionString="Server=NOICLT312;Database=RandomDatabase;UID=sa;PWD=Imfinity1;Pooling=true;Max Pool Size=200;Trusted_Connection=False;Persist Security Info=True" />-->
   </connectionStrings>
@@ -42,6 +42,7 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+        <directoryBrowse enabled="true" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
