--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -41,7 +41,9 @@
   <ItemGroup>
     <Compile Include="Dto\UserModel.cs" />
     <Compile Include="Enum\AppRole.cs" />
+    <Compile Include="Enum\CommonEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\CourseViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
