--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,8 +2,10 @@
 <repositories>
   <repository path="..\API\packages.config" />
   <repository path="..\Core\packages.config" />
+  <repository path="..\Data\packages.config" />
   <repository path="..\Enterprise\packages.config" />
   <repository path="..\Entity\packages.config" />
   <repository path="..\Random\packages.config" />
+  <repository path="..\Web\packages.config" />
   <repository path="..\Web\packages.config" />
 </repositories>
