--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Enum\CommonEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CourseViewModel.cs" />
+    <Compile Include="ViewModel\DocumentScope.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
