--- a/API/API.csproj
+++ b/API/API.csproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\CustomerPurchaseHistoryController.cs" />
     <Compile Include="Controllers\DocumentController.cs" />
