--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -98,7 +98,20 @@
     <Compile Include="Migrations\201508031704511_Added_CourseAttachmentMapping.Designer.cs">
       <DependentUpon>201508031704511_Added_CourseAttachmentMapping.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508161625188_unknown.cs" />
+    <Compile Include="Migrations\201508161625188_unknown.Designer.cs">
+      <DependentUpon>201508161625188_unknown.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508190418334_remove-date-toolkit.cs" />
+    <Compile Include="Migrations\201508190418334_remove-date-toolkit.Designer.cs">
+      <DependentUpon>201508190418334_remove-date-toolkit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508301807100_cart.cs" />
+    <Compile Include="Migrations\201508301807100_cart.Designer.cs">
+      <DependentUpon>201508301807100_cart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="POCO\Cart.cs" />
     <Compile Include="POCO\Course.cs" />
     <Compile Include="POCO\CourseDocument.cs" />
     <Compile Include="POCO\DocumentType.cs" />
@@ -144,6 +157,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201508031704511_Added_CourseAttachmentMapping.resx">
       <DependentUpon>201508031704511_Added_CourseAttachmentMapping.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508161625188_unknown.resx">
+      <DependentUpon>201508161625188_unknown.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508190418334_remove-date-toolkit.resx">
+      <DependentUpon>201508190418334_remove-date-toolkit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508301807100_cart.resx">
+      <DependentUpon>201508301807100_cart.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
